web-application/client/components/header/Header.css
header {
    box-sizing: border-box;
    max-width: 100vw;

    position: fixed;
    left: 0;
    right: 0;
    top: 0;

    z-index: 10;
    margin: 0;
    padding: 0;

    border-bottom: thin solid var(--header-border-color);
    background-color: var(--header-background-color);
    color: var(--header-text-color);
    box-shadow: 0px 0px 6px -3px rgba(0,0,0,0.25);

    font-size: 18px;
}
.ios header {
    padding-top: 60px;
}
.android header {
    padding-top: 40px;
}


@media (width > 800px ) {
    header {
        padding: 10px 25px;
    }

    .header__authenticated {
        box-sizing: border-box;
        display: grid;
        grid-template-columns: auto 120px 120px 120px 120px max-content;
        align-items: center;
        justify-items: center;
    }
    .header__authenticated .header__logo {
        justify-self: left;
    }

    .header__unauthenticated {
        box-sizing: border-box;
        display: grid;
        grid-template-columns: auto 120px max-content;
        align-items: center;
        justify-items: center;
    }
    .header__unauthenticated .header__logo {
        justify-self: left;
    }
}

@media (width <= 800px) {
    header {
        padding: 10px;
    }
    .header__authenticated {
        box-sizing: border-box;
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
        align-items: center;
        justify-items: center;
    }
    .header__unauthenticated {
        display: grid;
        grid-template-columns: 1fr 1fr max-content;
        align-items: center;
        justify-items: center;
    }


    header a.nav-link {
        display: inline-block;
        text-align: center;
    }
    header svg {
        margin-right: 0;
    }
    header .nav-text {
        display: block;
        font-size: 10px;
        line-height: 6px;
    }
    header .communities-logo .logo-text {
        display: none;
    }
}

